--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,15 +7,11 @@
         "plugin:react/recommended",
         "standard-with-typescript"
     ],
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-    }
+    "plugins": ["react"],
+    "rules": {}
 }
